[package]
name = "pi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.89"
clap = "4.5.19"
indexmap = "2.6.0"
peg = "0.8.4"
rayon = "1.10.0"
replace_with = "0.1.7"
serde_json = "1.0.128"
thiserror = "1.0.64"
